[tool.poetry]
name = "zentinel"
version = "0.0.3"
description = "Asynchronous port scanning with python"
authors = ["symonk <jackofspaces@gmail.com>"]
license = "Apache License 2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
codecov = "^2.1.12"
ipython = "^8.9.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 2
include_trailing_comma = true
force_grid_wrap = -1
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
known_first_party = "zentinel"
default_section = "THIRDPARTY"
forced_separate = "tests"
skip = ".tox,.eggs,ci/templates"

[mypy]
mypy_path = "zentinel"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
ignore_errors = false

[flake8]
max-line-length = 120
exclude = ".tox,.eggs,ci/templates"
